# ClipSyncPro

./: .gitignore  CMakeLists.txt  LAUNCH_RELEASE.bat  README.md  release.bat  resources.qrc  win32_resource.rc
src/: main.cpp
src/core/: ClipboardManager.cpp  ClipboardManager.h  Snippet.h
src/gui/: MainWindow.cpp  MainWindow.h  SnippetDelegate.cpp  SnippetDelegate.h  SystemTray.cpp  SystemTray.h
src/platform/: GlobalHotkey.cpp  GlobalHotkey.h
src/res/: style.qss
src/storage/: HistoryManager.cpp  HistoryManager.h
